[gd_scene load_steps=15 format=3 uid="uid://bqlp00180p135"]

[ext_resource type="Script" path="res://Scenes/Levels/settings.gd" id="1_wm83g"]
[ext_resource type="Texture2D" uid="uid://di4ax0p7ftkng" path="res://Fondo-menu.png" id="2_6vhe5"]
[ext_resource type="FontFile" uid="uid://bre1cjdaepuvc" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_lywwl"]
[ext_resource type="Texture2D" uid="uid://bgeq5ylio3nc8" path="res://Fondo-menu2.png" id="3_m1bx5"]
[ext_resource type="Texture2D" uid="uid://drmstm88ixw2f" path="res://Assets/Sprites/UI/R.png" id="4_vdntt"]
[ext_resource type="AudioStream" uid="uid://b7xgllo3odeno" path="res://Assets/Music/Effects/Click.mp3" id="6_y8x1v"]

[sub_resource type="Theme" id="Theme_adnus"]
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5m6x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8axi2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6vhe5")
}, {
"duration": 1.0,
"texture": ExtResource("3_m1bx5")
}],
"loop": true,
"name": &"default",
"speed": 0.5
}]

[sub_resource type="Animation" id="Animation_lfgtj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uwxkt"]
resource_name = "desvanecer_entrada"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2swc2"]
resource_name = "desvanecer_salir"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_7ubi0"]
resource_name = "desvanecer_salir_team"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 3.06667, 3.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx4bh"]
_data = {
"RESET": SubResource("Animation_lfgtj"),
"desvanecer_entrada": SubResource("Animation_uwxkt"),
"desvanecer_salir": SubResource("Animation_2swc2"),
"desvanecer_salir_team": SubResource("Animation_7ubi0")
}

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wm83g")

[node name="OptionButton" type="Button" parent="."]
layout_mode = 2
offset_left = 428.0
offset_top = 507.0
offset_right = 928.0
offset_bottom = 632.0
theme = SubResource("Theme_adnus")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 50
text = "Volver"

[node name="Volumen" type="HSlider" parent="."]
layout_mode = 2
offset_left = 378.0
offset_top = 252.0
offset_right = 1005.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 0

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 2
offset_left = 586.0
offset_top = 305.0
offset_right = 630.0
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)

[node name="idioma" type="CheckButton" parent="."]
layout_mode = 2
offset_left = 624.0
offset_top = 427.0
offset_right = 668.0
offset_bottom = 453.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)

[node name="volume" type="Label" parent="."]
layout_mode = 2
offset_left = 332.0
offset_top = 167.0
offset_right = 1012.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 0.991508)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 40
text = "Volumen de musica"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 33.0
offset_right = 201.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 100
text = "Ajustes"

[node name="mute" type="Label" parent="."]
layout_mode = 2
offset_left = 333.0
offset_top = 307.0
offset_right = 573.0
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 40
text = "Mutear"

[node name="IDIOMA" type="Label" parent="."]
layout_mode = 2
offset_left = 552.0
offset_top = 365.0
offset_right = 792.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 40
text = "Idioma"

[node name="ESP" type="Label" parent="."]
layout_mode = 2
offset_left = 337.0
offset_top = 434.0
offset_right = 617.0
offset_bottom = 489.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 35
text = "Espa√±ol"

[node name="Ingles" type="Label" parent="."]
layout_mode = 2
offset_left = 749.0
offset_top = 434.0
offset_right = 989.0
offset_bottom = 489.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lywwl")
theme_override_font_sizes/font_size = 35
text = "Ingles"

[node name="Back" type="TouchScreenButton" parent="."]
position = Vector2(679, 571)
scale = Vector2(25.2103, 6.39609)
shape = SubResource("RectangleShape2D_j5m6x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -3
position = Vector2(640, 360)
sprite_frames = SubResource("SpriteFrames_8axi2")
frame_progress = 0.586334

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xx4bh")
}

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2540.0
offset_top = -741.0
offset_right = -1222.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.33246, 1.74173)
texture = ExtResource("4_vdntt")

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_y8x1v")

[connection signal="pressed" from="OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="value_changed" from="Volumen" to="." method="_on_volumen_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="idioma" to="." method="_on_idioma_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
